// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar render when sidebar is closed sets all the correct classes 1`] = `
<Portal
  open={true}
>
  <div
    className="carbon-sidebar"
    data-component="sidebar"
  >
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="sidebar--left"
    >
      <div
        className="carbon-sidebar__sidebar carbon-sidebar__sidebar--left carbon-sidebar__sidebar--small"
        data-component="sidebar"
      />
    </CSSTransitionGroup>
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal-background"
    />
  </div>
</Portal>
`;

exports[`Sidebar sidebarClasses returns a base lefthand sidebar 1`] = `
<Portal
  open={true}
>
  <div
    className="carbon-sidebar"
    data-component="sidebar"
  >
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="sidebar--left"
    >
      <div
        className="carbon-sidebar__sidebar carbon-sidebar__sidebar--left carbon-sidebar__sidebar--small"
        data-component="sidebar"
      />
    </CSSTransitionGroup>
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal-background"
    />
  </div>
</Portal>
`;

exports[`Sidebar sidebarClasses returns a base sidebar 1`] = `
<Portal
  open={true}
>
  <div
    className="carbon-sidebar custom-class"
    data-component="sidebar"
  >
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="sidebar--right"
    >
      <div
        className="carbon-sidebar__sidebar carbon-sidebar__sidebar--right carbon-sidebar__sidebar--medium"
        data-component="sidebar"
      >
        <span
          className="carbon-sidebar__close"
        >
          <Icon
            bgSize="small"
            className="carbon-sidebar__close-icon"
            data-element="close"
            onClick={[Function]}
            type="close"
          />
        </span>
        <Textbox />
        <Textbox />
        <Textbox />
      </div>
    </CSSTransitionGroup>
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal-background"
    >
      <div
        className="carbon-modal__background"
      />
    </CSSTransitionGroup>
  </div>
</Portal>
`;

exports[`Sidebar tags include correct component, element and role data tags 1`] = `
<Portal
  open={true}
>
  <div
    className="carbon-sidebar"
    data-component="sidebar"
    data-element="bar"
    data-role="baz"
  >
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="sidebar--right"
    >
      <div
        className="carbon-sidebar__sidebar carbon-sidebar__sidebar--right carbon-sidebar__sidebar--medium"
        data-component="sidebar"
        data-element="bar"
        data-role="baz"
      >
        <span
          className="carbon-sidebar__close"
        >
          <Icon
            bgSize="small"
            className="carbon-sidebar__close-icon"
            data-element="close"
            onClick={[Function]}
            type="close"
          />
        </span>
      </div>
    </CSSTransitionGroup>
    <CSSTransitionGroup
      component="div"
      transitionAppear={false}
      transitionEnter={true}
      transitionEnterTimeout={500}
      transitionLeave={true}
      transitionLeaveTimeout={500}
      transitionName="modal-background"
    >
      <div
        className="carbon-modal__background"
      />
    </CSSTransitionGroup>
  </div>
</Portal>
`;
